--- a/core_assets/css/style.css
+++ b/core_assets/css/style.css
@@ -66,78 +66,101 @@ p {
 
 /* product buy box */
 /* line 2, ../sass/partials/_product-page.scss */
+.product-image__thumbnails {
+  display: none;
+}
+
+/* line 5, ../sass/partials/_product-page.scss */
 .product-detail__header {
   display: flex;
   justify-content: space-between;
 }
 
-/* line 7, ../sass/partials/_product-page.scss */
+/* line 10, ../sass/partials/_product-page.scss */
 .product-info__item-detail {
   margin-top: 16px;
 }
 
-/* line 10, ../sass/partials/_product-page.scss */
+/* line 13, ../sass/partials/_product-page.scss */
 .product-detail__heading {
   width: 75%;
 }
 
-/* line 13, ../sass/partials/_product-page.scss */
+/* line 16, ../sass/partials/_product-page.scss */
 .product-detail__heading h1 {
   font-size: 24px;
   margin-bottom: 8px;
 }
 
-/* line 18, ../sass/partials/_product-page.scss */
+/* line 20, ../sass/partials/_product-page.scss */
+.product-rating .fa-star {
+  color: #00B67A;
+}
+
+/* line 23, ../sass/partials/_product-page.scss */
 .product-detail__price {
   text-align: right;
 }
 
-/* line 21, ../sass/partials/_product-page.scss */
+/* line 26, ../sass/partials/_product-page.scss */
 .product-detail__price--main {
   font-size: 24px;
 }
 
-/* line 24, ../sass/partials/_product-page.scss */
+/* line 29, ../sass/partials/_product-page.scss */
 .product-detail__price--main span {
   display: inline-block;
   vertical-align: top;
   font-size: 18px;
 }
 
-/* line 29, ../sass/partials/_product-page.scss */
-.product-detail__price--save {
-  border: 1px solid;
-  padding: 4px;
+/* line 34, ../sass/partials/_product-page.scss */
+.product-detail__price--main-sale {
+  color: #be1e2d;
 }
 
-/* line 33, ../sass/partials/_product-page.scss */
+/* line 37, ../sass/partials/_product-page.scss */
+.product-detail__price--save {
+  background-color: #be1e2d;
+  color: white;
+  padding: 4px 8px;
+  float: right;
+}
+
+/* line 43, ../sass/partials/_product-page.scss */
 .product-detail__price--was {
   font-size: 14px;
 }
 
-/* line 36, ../sass/partials/_product-page.scss */
+/* line 46, ../sass/partials/_product-page.scss */
 .product-detail__price--was span {
   text-decoration: line-through;
 }
 
-/* line 39, ../sass/partials/_product-page.scss */
+/* line 49, ../sass/partials/_product-page.scss */
 .product-detail__input-text input, .product-detail__input-text label {
   width: 100%;
   display: block;
 }
 
-/* line 44, ../sass/partials/_product-page.scss */
+/* line 54, ../sass/partials/_product-page.scss */
 .product-detail__quantity {
   display: flex;
   align-items: center;
 }
 
-/* line 49, ../sass/partials/_product-page.scss */
+/* line 59, ../sass/partials/_product-page.scss */
 .product-detail__quantity div {
   margin-right: 10px;
 }
 
-/* line 52, ../sass/partials/_product-page.scss */
+/* line 62, ../sass/partials/_product-page.scss */
+.product-detail__quantity-value {
+  border: 1px solid #d5d6d8;
+  padding: 8px 16px;
+}
+
+/* line 66, ../sass/partials/_product-page.scss */
 .product-detail__quantity-minus, .product-detail__quantity-plus {
   border: 1px solid;
   height: 30px;
@@ -149,55 +172,65 @@ p {
   align-items: center;
   justify-content: center;
 }
+/* line 77, ../sass/partials/_product-page.scss */
+.product-detail__quantity-minus .fa, .product-detail__quantity-plus .fa {
+  padding-top: 2px;
+}
+
+/* line 81, ../sass/partials/_product-page.scss */
+.product-detail__info-item span {
+  width: 20px;
+  margin-right: 5px;
+}
 
 /* product buy box - end */
-/* line 67, ../sass/partials/_product-page.scss */
+/* line 88, ../sass/partials/_product-page.scss */
 .product-recommendations {
   border-top: 1px solid #d5d6d8;
   padding-top: 8px;
 }
 
 /* Product Description */
-/* line 76, ../sass/partials/_product-page.scss */
+/* line 102, ../sass/partials/_product-page.scss */
 .product-info__desktop-nav {
   display: none;
 }
 
-/* line 80, ../sass/partials/_product-page.scss */
+/* line 106, ../sass/partials/_product-page.scss */
 .product-info__item {
   border-top: 1px solid #d5d6d8;
   padding: 8px;
 }
 
-/* line 84, ../sass/partials/_product-page.scss */
+/* line 110, ../sass/partials/_product-page.scss */
 .product-info__item:last-child {
   border-bottom: 1px solid #d5d6d8;
 }
 
-/* line 88, ../sass/partials/_product-page.scss */
+/* line 114, ../sass/partials/_product-page.scss */
 .product-info__item-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-/* line 93, ../sass/partials/_product-page.scss */
+/* line 119, ../sass/partials/_product-page.scss */
 .product-info__item-header h2 {
   margin-bottom: 0px;
   font-size: 18px;
 }
 
-/* line 97, ../sass/partials/_product-page.scss */
+/* line 123, ../sass/partials/_product-page.scss */
 .product-info__item-detail {
   display: none;
 }
 
-/* line 100, ../sass/partials/_product-page.scss */
+/* line 126, ../sass/partials/_product-page.scss */
 .product-info__item--active .product-info__item-detail {
   display: block;
 }
 
-/* line 104, ../sass/partials/_product-page.scss */
+/* line 130, ../sass/partials/_product-page.scss */
 .product-info__item-icon {
   width: 20px;
   height: 15px;
@@ -213,7 +246,7 @@ p {
   cursor: pointer;
 }
 
-/* line 119, ../sass/partials/_product-page.scss */
+/* line 145, ../sass/partials/_product-page.scss */
 .product-info__item-icon span {
   display: block;
   position: absolute;
@@ -233,29 +266,29 @@ p {
   transition: .25s ease-in-out;
 }
 
-/* line 138, ../sass/partials/_product-page.scss */
+/* line 164, ../sass/partials/_product-page.scss */
 .product-info__item-icon span:nth-child(1) {
   top: 0px;
 }
 
-/* line 142, ../sass/partials/_product-page.scss */
+/* line 168, ../sass/partials/_product-page.scss */
 .product-info__item-icon span:nth-child(2), .product-info__item-icon span:nth-child(3) {
   top: 6px;
 }
 
-/* line 146, ../sass/partials/_product-page.scss */
+/* line 172, ../sass/partials/_product-page.scss */
 .product-info__item-icon span:nth-child(4) {
   top: 12px;
 }
 
-/* line 150, ../sass/partials/_product-page.scss */
+/* line 176, ../sass/partials/_product-page.scss */
 .product-info__item--active .product-info__item-icon span:nth-child(1) {
   top: 6px;
   width: 0%;
   left: 50%;
 }
 
-/* line 156, ../sass/partials/_product-page.scss */
+/* line 182, ../sass/partials/_product-page.scss */
 .product-info__item--active .product-info__item-icon span:nth-child(2) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -263,7 +296,7 @@ p {
   transform: rotate(45deg);
 }
 
-/* line 163, ../sass/partials/_product-page.scss */
+/* line 189, ../sass/partials/_product-page.scss */
 .product-info__item--active .product-info__item-icon span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
@@ -271,7 +304,7 @@ p {
   transform: rotate(-45deg);
 }
 
-/* line 170, ../sass/partials/_product-page.scss */
+/* line 196, ../sass/partials/_product-page.scss */
 .product-info__item--active .product-info__item-icon span:nth-child(4) {
   top: 18px;
   width: 0%;
@@ -279,51 +312,64 @@ p {
 }
 
 @media only screen and (min-width: 768px) {
+  /* Product Imagery */
+  /* line 209, ../sass/partials/_product-page.scss */
+  .product-image__thumbnails {
+    display: flex;
+  }
+
+  /* line 212, ../sass/partials/_product-page.scss */
+  .product-image__thumb {
+    width: 20%;
+    margin-right: 10px;
+  }
+
   /* product buy box */
-  /* line 182, ../sass/partials/_product-page.scss */
+  /* line 220, ../sass/partials/_product-page.scss */
   .product-detail__header {
     display: block;
   }
 
-  /* line 185, ../sass/partials/_product-page.scss */
+  /* line 223, ../sass/partials/_product-page.scss */
   .product-detail__price {
     text-align: left;
     display: flex;
     align-items: center;
   }
 
-  /* line 190, ../sass/partials/_product-page.scss */
+  /* line 228, ../sass/partials/_product-page.scss */
   .product-detail__price div {
     margin-right: 10px;
   }
 
-  /* line 193, ../sass/partials/_product-page.scss */
+  /* line 231, ../sass/partials/_product-page.scss */
   .product-detail__price--save {
     display: inline-block;
+    float: none;
   }
 
   /* product buy box - end */
-  /* line 199, ../sass/partials/_product-page.scss */
+  /* line 241, ../sass/partials/_product-page.scss */
   .product-info__item {
     display: none;
   }
 
-  /* line 202, ../sass/partials/_product-page.scss */
+  /* line 244, ../sass/partials/_product-page.scss */
   .product-info__item:last-child {
     border-bottom: 0px;
   }
 
-  /* line 205, ../sass/partials/_product-page.scss */
+  /* line 247, ../sass/partials/_product-page.scss */
   .product-info__item--active, .product-info__item-detail {
     display: block;
   }
 
-  /* line 208, ../sass/partials/_product-page.scss */
+  /* line 250, ../sass/partials/_product-page.scss */
   .product-info__item-detail h2 {
     margin-bottom: 16px;
   }
 
-  /* line 211, ../sass/partials/_product-page.scss */
+  /* line 253, ../sass/partials/_product-page.scss */
   .product-info__desktop-nav {
     display: block;
     width: 15%;
@@ -331,24 +377,24 @@ p {
     border-top: 1px solid #f5f5f5;
   }
 
-  /* line 217, ../sass/partials/_product-page.scss */
+  /* line 259, ../sass/partials/_product-page.scss */
   .product-info__desktop-nav-item {
     padding: 8px;
     font-family: verlag, Calibri, sans-serif;
   }
 
-  /* line 221, ../sass/partials/_product-page.scss */
+  /* line 263, ../sass/partials/_product-page.scss */
   .product-info__desktop-nav-item:hover {
     cursor: pointer;
   }
 
-  /* line 224, ../sass/partials/_product-page.scss */
+  /* line 266, ../sass/partials/_product-page.scss */
   .product-info__desktop-nav-item--active {
     border-bottom: 1px solid #f15b29;
     background-color: #f5f5f5;
   }
 
-  /* line 229, ../sass/partials/_product-page.scss */
+  /* line 271, ../sass/partials/_product-page.scss */
   .product-info__item {
     width: 85%;
     min-height: 200px;
@@ -360,12 +406,12 @@ p {
     margin-top: 0px;
   }
 
-  /* line 240, ../sass/partials/_product-page.scss */
+  /* line 282, ../sass/partials/_product-page.scss */
   .product-info__item-icon {
     display: none;
   }
 
-  /* line 244, ../sass/partials/_product-page.scss */
+  /* line 286, ../sass/partials/_product-page.scss */
   .video-container {
     width: 75%;
     margin: 0 auto;
