--- a/core_assets/sass/style.scss
+++ b/core_assets/sass/style.scss
@@ -1,8 +1,23 @@
+@import "partials/_reset.scss";
+@import "partials/_bootstrap.scss";
+
 @import "partials/_variables.scss";
 @import "partials/_generic.scss";
 
+@import "partials/_forms.scss";
 @import "partials/_text.scss";
+@import "partials/_buttons.scss";
+@import "partials/_misc.scss";
+
+@import "partials/_layout.scss";
+@import "partials/_masthead.scss";
 @import "partials/_footer.scss";
+@import "partials/_nav.scss";
 
 @import "partials/_product-page.scss";
- 
+
+
+
+@import "partials/_new-layout.scss";
+@import "custom/homepage-2018/_homepage-2018.scss";
+
