--- a/core_assets/sass/partials/_masthead.scss
+++ b/core_assets/sass/partials/_masthead.scss
@@ -1,3 +1,15 @@
+/* **** New **** */
+
+.band-head {
+	background-color:white;
+}
+
+
+/* End New */
+
+
+
+
 .masthead {
 	margin-top:$df_mar_h;
 	border-bottom: 1px solid $light-grey2;
