--- a/core_assets/sass/style.scss
+++ b/core_assets/sass/style.scss
@@ -15,6 +15,7 @@
 @import "partials/_nav.scss";
 
 @import "partials/_product-page.scss";
+@import "partials/_tnp.scss";
 
 @import "partials/_checkout.scss";
 
