--- a/core_assets/css/style.css
+++ b/core_assets/css/style.css
@@ -4694,6 +4694,45 @@ a.primary-nav__item {
     margin: 0 auto;
   }
 }
+/* line 1, ../sass/partials/_tnp.scss */
+.category-toolbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* line 6, ../sass/partials/_tnp.scss */
+.category-toolbar__pagination li {
+  display: inline;
+  margin: 0px 10px;
+}
+
+/* line 11, ../sass/partials/_tnp.scss */
+.top-copy, .top-copy p {
+  font-size: 14px;
+}
+
+/* line 14, ../sass/partials/_tnp.scss */
+.top-copy p {
+  margin-bottom: 0px;
+}
+
+/* line 18, ../sass/partials/_tnp.scss */
+.top-copy p {
+  font-size: 14px;
+  display: -webkit-box;
+  height: 40px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* line 28, ../sass/partials/_tnp.scss */
+.tnp-controls__refine, .tnp-controls__sort {
+  width: 49%;
+  display: inline-block;
+}
+
 /* line 1, ../sass/partials/_checkout.scss */
 .checkout-field {
   position: relative;
