--- a/core_assets/css/style.css
+++ b/core_assets/css/style.css
@@ -4728,11 +4728,137 @@ a.primary-nav__item {
 }
 
 /* line 28, ../sass/partials/_tnp.scss */
+.top-related-cats h3 {
+  margin-bottom: 0px;
+}
+
+/* line 31, ../sass/partials/_tnp.scss */
+.top-related-cats ul {
+  display: none;
+}
+
+/* line 34, ../sass/partials/_tnp.scss */
+.top-related-cats ul li {
+  display: inline-block;
+}
+
+/* line 38, ../sass/partials/_tnp.scss */
+.top-related-cats ul li a {
+  border: 1px solid #f15b29;
+  padding: 8px;
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 8px;
+}
+
+/* line 45, ../sass/partials/_tnp.scss */
+.top-related-cats ul li a:hover {
+  text-decoration: none;
+  background-color: #f15b29;
+  color: white;
+}
+
+/* line 50, ../sass/partials/_tnp.scss */
+.top-related-cats__icon--active {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: transform 500ms ease;
+}
+
+/* line 60, ../sass/partials/_tnp.scss */
+.tnp-controls__count {
+  text-align: center;
+}
+
+/* line 63, ../sass/partials/_tnp.scss */
 .tnp-controls__refine, .tnp-controls__sort {
   width: 49%;
   display: inline-block;
 }
 
+/* line 69, ../sass/partials/_tnp.scss */
+.sidenav {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  background-color: #f5f5f5;
+  /* Black*/
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* line 81, ../sass/partials/_tnp.scss */
+.sidenav h2 {
+  margin-bottom: 8px;
+}
+
+/* line 84, ../sass/partials/_tnp.scss */
+.sidenav ul {
+  padding-left: 10px;
+}
+
+/* line 87, ../sass/partials/_tnp.scss */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media only screen and (min-width: 992px) {
+  /* line 96, ../sass/partials/_tnp.scss */
+  .tnp-controls__count {
+    width: 75%;
+    text-align: right;
+    display: inline-block;
+    padding: 10px 10px 0px 0px;
+  }
+
+  /* line 103, ../sass/partials/_tnp.scss */
+  .tnp-controls__refine {
+    display: none;
+  }
+
+  /* line 106, ../sass/partials/_tnp.scss */
+  .tnp-controls__sort {
+    width: 25%;
+  }
+
+  /* line 109, ../sass/partials/_tnp.scss */
+  .sidenav {
+    height: auto;
+    /* 100% Full-height */
+    width: auto;
+    /* 0 width - change this with JavaScript */
+    position: relative;
+    /* Stay in place */
+    background-color: initial;
+    /* Black*/
+    padding-top: 0px;
+    /* Place content 60px from the top */
+  }
+
+  /* line 117, ../sass/partials/_tnp.scss */
+  .sidenav .closebtn {
+    display: none;
+  }
+}
 /* line 1, ../sass/partials/_checkout.scss */
 .checkout-field {
   position: relative;
