--- a/core_assets/sass/custom/homepage-2018/_new-homepage.scss
+++ b/core_assets/sass/custom/homepage-2018/_new-homepage.scss
@@ -3,7 +3,6 @@
 	background-size: 100%;
 	background-position:center;
 	position:relative;
-	margin-top:-16px;
 }
 .landing-page-banner__headline {
 	position:absolute;
@@ -46,9 +45,13 @@
 .landing-page-banner__snippet {
 	width:90%;
 	margin:0 auto;
+	background-color: rgba(255,255,255,0.8);
 }
 
 @media screen and (min-width:992px) {
+.landing-page-band {
+	margin-top:-16px;
+}	
 .landing-page-banner__headline {
 	h1 {
 	font-size:3em;
