--- a/core_assets/sass/partials/_tnp.scss
+++ b/core_assets/sass/partials/_tnp.scss
@@ -78,6 +78,9 @@
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
+.sidenav a {
+    color:$dark-grey;
+}
 .sidenav h2 {
     margin-bottom: $df_mar_h;
 }
